feat(users): add isAcrophobia field
